--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "luxon": "^3.4.4",
+    "@types/luxon": "^3.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
