--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": ""
   },
   "dependencies": {
     "next": "15.1.2",
@@ -17,12 +18,18 @@
     "@types/luxon": "^3.4.2"
   },
   "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import-newlines": "^1.3.4",
+    "eslint-plugin-import-order": "^2.1.4",
     "@eslint/eslintrc": "^3",
+    "@stylistic/eslint-plugin-js": "^1.0.0",
+    "@stylistic/eslint-plugin-jsx": "^1.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.8.0"
   }
 }
