--- a/package.json
+++ b/package.json
@@ -7,28 +7,35 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": ""
+    "test": "jest --coverage"
   },
   "dependencies": {
+    "@types/luxon": "^3.4.2",
+    "luxon": "^3.4.4",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.0",
-    "luxon": "^3.4.4",
-    "@types/luxon": "^3.4.2"
+    "sass": "^1.83.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@stylistic/eslint-plugin-js": "^1.0.0",
+    "@stylistic/eslint-plugin-jsx": "^1.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-import-newlines": "^1.3.4",
     "eslint-plugin-import-order": "^2.1.4",
-    "@eslint/eslintrc": "^3",
-    "@stylistic/eslint-plugin-js": "^1.0.0",
-    "@stylistic/eslint-plugin-jsx": "^1.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^7.8.0"
   }
